Adds infographic as appendix to summary.tex.

--- a/summary.tex
+++ b/summary.tex
@@ -85,12 +85,15 @@ abbreviations in the title or heads unless they are unavoidable \cite{wagner2022
 
 \section{Proof Of Concept}
 
-Before you begin to format your paper, first write and save the content as a 
-separate text file. Complete all content and organizational editing before 
+Complete all content and organizational editing before 
 formatting. Please note sections \ref{AF}-\ref{QAM} below for more information on 
 proofreading, spelling and grammar.
 
 \bibliographystyle{IEEEtran}
 \bibliography{references}
+
+\section*{Appendix}
+
+\noindent\footnotesize{[3]\hspace{0.5em}Infographic of the proposed Assertion Framework and the QA Workflow}
 
 \end{document}
