Fixes a cross-reference.

--- a/summary.tex
+++ b/summary.tex
@@ -66,7 +66,7 @@ Please do not revise any of the current designations.
 
 Before you begin to format your paper, first write and save the content as a 
 separate text file. Complete all content and organizational editing before 
-formatting. Please note sections \ref{AF}-\ref{QAM} below for more information on 
+formatting. Please note sections \ref{AF}-\ref{QAW} below for more information on 
 proofreading, spelling and grammar.
 
 Keep your text and graphic files separate until after the text has been 
@@ -86,7 +86,7 @@ abbreviations in the title or heads unless they are unavoidable \cite{wagner2022
 \section{Proof Of Concept}
 
 Complete all content and organizational editing before 
-formatting. Please note sections \ref{AF}-\ref{QAM} below for more information on 
+formatting. Please note sections \ref{AF}-\ref{QAW} below for more information on 
 proofreading, spelling and grammar.
 
 \bibliographystyle{IEEEtran}
