--- a/summary.tex
+++ b/summary.tex
@@ -2,20 +2,27 @@
 \IEEEoverridecommandlockouts
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
 \usepackage{cite}
+\usepackage{hyperref}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
+
+\hypersetup{
+  colorlinks   = true, %Colours links instead of ugly boxes
+  urlcolor     = blue, %Colour for external hyperlinks
+  linkcolor    = red, %Colour of internal links
+  citecolor   = red %Colour of citations
+}
+
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
 \title{Quality Assurance for Spatial Research Data\\
-{\footnotesize M. Wagner and C. Henzen, “Quality assurance for spatial research data,”
-ISPRS International Journal of Geo-Information, vol. 11, no. 6, p. 334,
-2022}
-\thanks{Identify applicable funding agency here. If none, delete this.}
+{\footnotesize A summary - Original by: M. Wagner and C. Henzen - Published in: ISPRS International Journal of Geo-Information, vol. 11, no. 6, p. 334, 2022 \cite{sjr}}
+\thanks{DOI of \cite{wagner2022quality}: \href{https://doi.org/10.3390/ijgi11060334}{10.3390/ijgi11060334} - \href{https://github.com/Anything-Code/quality-assurance-for-spatial-research-data-a-summary/blob/master/summary.tex}{LaTeX code}}
 }
 
 \author{\IEEEauthorblockN{1\textsuperscript{st} Niklas Lübcke}
@@ -40,7 +47,7 @@ christin.henzen@tu-dresden.de}
 \maketitle
 
 \begin{abstract}
-    For spatial data sources in Earth System Science (ESS), the authors (M. Wagner and C. Henzen) propose a revised maturity matrix including FAIR (Findable, Accessible, Interoperable and Reusable) criteria and a spatial data quality matrix where maturity levels are related to quality metrics. Both metrics are then mapped to phases within the research data lifecycle to produce a QA workflow, which the authors have implemented in the interactive questionnaire tool RDMO (Research Data Management Organiser).
+    The authors of \cite{wagner2022quality} propose an Assertion Framework (\ref{AF}) and a Quality Assurance Workflow (\ref{QAW}) for spatial data sources in Earth System Science (ESS). The framework is comprised of an evaluation of the 5-star rating system for open data by Tim Berners-Lee, a revised maturity matrix including FAIR (Findable, Accessible, Interoperable and Reusable) criteria and a spatial data quality matrix where maturity levels are related to quality metrics. The metrics of openness, maturity and quality are then mapped to phases within the research data lifecycle to produce the proposed QA workflow, which the authors have implemented in the interactive questionnaire tool RDMO (Research Data Management Organiser).
 \end{abstract}
 
 \begin{IEEEkeywords}
@@ -48,30 +55,23 @@ quality assurance; data maturity; maturity matrix; spatial data quality; FAIR
 \end{IEEEkeywords}
 
 \section{Introduction}
-The authors of \cite{wagner2022quality} recognised the level of quality of spatial data as an indication of the relevance of the extracted results of scientific work in the field. They suggest that there is a vacuum for tools to assess the quality of spatial data sources. In addition, despite the high quality of scientific data creation and manipulation workflows, the authors identified the monitoring and reporting of adequate information as a challenge in research data management (RDM). This leads to information being output only at the end or after the end of the data lifecycle.
+M. Wagner and C. Henzen recognised the level of quality of spatial data as an indication of the relevance of the extracted results of scientific work in the field. They suggest that there is a vacuum for tools to assess the quality of spatial data sources. In addition, despite the high quality of scientific data creation and manipulation workflows, the authors identified the monitoring and reporting of adequate information as a challenge in research data management (RDM). This leads to information being output only at the end or after the end of the data lifecycle.
 
-Both identified challenges are addressed in \cite{wagner2022quality}. A framework for quantifying the quality of data sources is proposed, where sources can be rated from 1 to 5 stars. A QA workflow that includes monitoring and reporting during the data lifecycle is also presented.
+Both of the challenges are addressed in \cite{wagner2022quality}. A framework for quantifying the quality of data sources is proposed, where sources can be rated from 1 to 5 stars. A QA workflow that includes monitoring and reporting during the data lifecycle is also presented.
 
-\section{Propositions}
+\section{Results}
 
 \subsection{Assertion Framework} \label{AF}
 
 The IEEEtran class file is used to format your paper and style the text. All margins, 
 column widths, line spaces, and text fonts are prescribed; please do not 
 alter them. You may note peculiarities. For example, the head margin
-measures proportionately more than is customary. This measurement 
-and others are deliberate, using specifications that anticipate your paper 
-as one part of the entire proceedings, and not as an independent document. 
-Please do not revise any of the current designations.
+measures proportionately more than is customary. 
 
 Before you begin to format your paper, first write and save the content as a 
 separate text file. Complete all content and organizational editing before 
 formatting. Please note sections \ref{AF}-\ref{QAW} below for more information on 
 proofreading, spelling and grammar.
-
-Keep your text and graphic files separate until after the text has been 
-formatted and styled. Do not number text heads---{\LaTeX} will do that 
-for you.
 
 \subsection{Quality Assurance Workflow}\label{QAW}
 Define abbreviations and acronyms the first time they are used in the text, 
@@ -83,7 +83,7 @@ abbreviations in the title or heads unless they are unavoidable \cite{wagner2022
 \item Use either SI (MKS) or CGS as primary units. (SI units are encouraged.) English units may be used as secondary units (in parentheses). An exception would be the use of English units as identifiers in trade, such as ``3.5-inch disk drive'' \cite{sjr}.
 \end{itemize}
 
-\section{Proof Of Concept}
+\subsection{Proof Of Concept}\label{POC}
 
 Complete all content and organizational editing before 
 formatting. Please note sections \ref{AF}-\ref{QAW} below for more information on 
@@ -92,8 +92,13 @@ proofreading, spelling and grammar.
 \bibliographystyle{IEEEtran}
 \bibliography{references}
 
-\section*{Appendix}
+\renewcommand{\refname}{Appendix}
 
-\noindent\footnotesize{[3]\hspace{0.5em}Infographic of the proposed Assertion Framework and the QA Workflow}
+\begin{thebibliography}{00}
+\makeatletter
+\addtocounter{\@listctr}{2}
+\makeatother
+\bibitem{b1} Infographic of the proposed Assertion Framework and the QA Workflow
+\end{thebibliography}
 
 \end{document}
