Finishes and combines figure with summary.

--- a/summary.tex
+++ b/summary.tex
@@ -77,7 +77,7 @@ The aim of the Assertion Framework is to provide a tool for assessing the qualit
     \item Data quality
 \end{enumerate}
 
-The authors of \cite{wagner2022quality} do not calculate an average of all the metrics or categories included. The output of the framework is 3 independent ratings between 1 and 5 stars.  The rating is created by following a ladder principle, where a higher step adds another aspect to the metrics of the data source.
+The authors of \cite{wagner2022quality} do not calculate an average of all the metrics or categories included. Instead, the output of the framework is 3 independent ratings between 1 and 5 stars. The ratings are created by following a ladder principle, where a higher step adds another aspect to the metrics of the data source.
 
 It is possible for categories to have limited rating ranges. As shown in \cite{wagner2022quality}, e.g. the openness category can only produce a rating between 2 and 4 stars.
 
@@ -100,7 +100,7 @@ To apply their proposed framework, the authors rate and discuss SPAM2010 (A land
 \makeatletter
 \addtocounter{\@listctr}{2}
 \makeatother
-\bibitem{infographic} Infographic of the proposed Assertion Framework and the QA Workflow
+\bibitem{figure} Figure of the proposed Assertion Framework and the QA Workflow
 \end{thebibliography}
 
 \end{document}
